Refactor Payment Microservice for Robust Exception Handling and Consistent Response Structure Implemented custom exception handling for external service interactions to enhance error management. Improved the handling of null and empty responses to provide clear feedback to API consumers.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=orders
 spring.datasource.url=jdbc:h2:mem:ordersdb;DB_CLOSE_DELAY=-1
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.password=orders
 spring.sql.init.platform=h2
 
 # H2 Console (for debugging and testing)
