--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,10 @@
 spring.application.name=orders
+server.port=8082
+
+# Configuración de Eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
 
 # H2 settings
 spring.datasource.url=jdbc:h2:mem:ordersdb;DB_CLOSE_DELAY=-1
