Adding global exceptions handling

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,22 @@
 spring.application.name=orders
 server.port=8082
 
-# Configuración de Eureka
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://192.168.0.10:8761/eureka/
+eureka.instance.hostname=localhost
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
-# H2 settings
+eureka.instance.leaseRenewalIntervalInSeconds=30
+eureka.instance.leaseExpirationDurationInSeconds=90
+
 spring.datasource.url=jdbc:h2:mem:ordersdb;DB_CLOSE_DELAY=-1
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=orders
 spring.sql.init.platform=h2
 
-# H2 Console (for debugging and testing)
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-# JPA Settings
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
