--- a/pom.xml
+++ b/pom.xml
@@ -37,21 +37,26 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- Spring Cloud Openfeign Dependencies -->
+        <!-- Spring Cloud Dependencies -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
             <version>4.1.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <version>4.0.0</version>
+        </dependency>
 
-        <!-- Database -->
+        <!-- Database Dependencies -->
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
         </dependency>
 
-        <!-- Mapper Libraries -->
+        <!-- Mapping Libraries -->
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
@@ -87,11 +92,6 @@
             <version>25.0.0</version>
             <scope>compile</scope>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-            <version>4.0.0</version>
-        </dependency>
     </dependencies>
 
     <build>
@@ -109,5 +109,11 @@
             </plugin>
         </plugins>
     </build>
-
+    <developers>
+        <developer>
+            <id>linkedin.com/in/davecalix</id>
+            <name>Hector David Guzman Calix</name>
+            <email>davecalix@gmail.com</email>
+        </developer>
+    </developers>
 </project>
